--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -347,10 +347,9 @@ elseif (UNIX)
     target_link_libraries(libtcc PUBLIC m dl Threads::Threads)
 endif()
 
-if(${OS_SYSTEM} STREQUAL "CentOS Stream" OR ${OS_SYSTEM} STREQUAL "RedHat Linux" OR ${OS_SYSTEM} STREQUAL "Fedora")
+if(${OS_SYSTEM} STREQUAL "CentOS Stream" OR ${OS_SYSTEM} STREQUAL "RedHat Linux" OR ${OS_SYSTEM} STREQUAL "Fedora" OR ${OS_SYSTEM} STREQUAL "CentOS Linux")
     target_compile_definitions(libtcc
-        PUBLIC CONFIG_LDDIR=\"lib64\"
-        PUBLIC CONFIG_TCC_LIBPATHS=\"{B}\")
+        PUBLIC CONFIG_LDDIR=\"lib64\")
 endif()
 
 target_include_directories(libtcc
