ci: update centos.yml

--- a/.github/workflows/centos.yml
+++ b/.github/workflows/centos.yml
@@ -21,15 +21,11 @@ jobs:
       - name: Prepare
         run: |
           dnf install git make cmake gcc gcc-c++ binutils glibc-devel valgrind autoconf libtool bison automake libxml2-devel sudo which rpmdevtools rpmlint yum-utils python3 -y
-      - name: Configure & build
+      - name: Configure & build & ctest & Create RPM Installer
         run: |
             mkdir build
             cd build
             cmake .. -DCMAKE_BUILD_TYPE=Release -D BUILD_TESTING=ON
             cmake --build .
-      - name: Run ctest & Create RPM Installer
-        shell: cmd
-        run: |
-            cd build
-            ctest -C Release --output-on-failure -F
             cpack --config CPackConfig.cmake -G RPM
+            ctest -C Release --output-on-failure -F
