--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ SET(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)
 set(CPACK_VERBATIM_VARIABLES YES)
 set(CPACK_INSTALL_CMAKE_CONFIGURATIONS Release)
 
+set(OS_SYSTEM )
+set(IS_REDHAT FALSE)
 if(WIN32)
     if(CMAKE_SIZEOF_VOID_P MATCHES "8")
         set(CMAKE_INSTALLER_DIR "C:/Program Files/")
@@ -43,7 +45,7 @@ if(WIN32)
         set(CMAKE_INSTALLER_DIR "C:/Program Files (x86)/")
         set(CMAKE_INSTALL_PREFIX "C:/Program Files (x86)/${PROJECT_NAME}")
     endif()
-else()
+elseif(NOT APPLE)
     file(STRINGS /etc/os-release OS_SYSTEM REGEX "^NAME=")
     string(REGEX REPLACE "NAME=\"(.*)\"" "\\1" OS_SYSTEM "${OS_SYSTEM}")
     if(${OS_SYSTEM} STREQUAL "CentOS Stream"
