ci: update cmake.yml

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -77,4 +77,4 @@ jobs:
       - name: Run ctest
         run: |
             cd build
-            ctest -C Debug --output-on-failure -Fg
+            ctest -C Debug --output-on-failure -F
