--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test-x86_64-linux:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 2
     steps:
     - uses: actions/checkout@v4
@@ -50,55 +50,55 @@ jobs:
         C:\msys64\usr\bin\bash -l -c "./configure && make clean all && make test -k"
 
   test-armv7-linux:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 6
     steps:
     - uses: actions/checkout@v4
-    - uses: uraimo/run-on-arch-action@v2
+    - uses: uraimo/run-on-arch-action@v3
       name: make & test tcc (armv7-linux)
       with:
         arch: armv7
-        distro: ubuntu20.04
+        distro: ubuntu22.04
         githubToken: ${{ github.token }}
         install: |
           apt-get update -q -y
           apt-get install -q -y gcc make
         run: |
-            echo "::endgroup::" && echo "::endgroup::" # missing in 'run-on-arch-action'
+            echo "::endgroup::" # flatten 'run container'
             ./configure && make && make test -k
 
   test-aarch64-linux:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 6
     steps:
     - uses: actions/checkout@v4
-    - uses: uraimo/run-on-arch-action@v2
+    - uses: uraimo/run-on-arch-action@v3
       name: make & test tcc (aarch64-linux)
       with:
         arch: aarch64
-        distro: ubuntu20.04
+        distro: ubuntu22.04
         githubToken: ${{ github.token }}
         install: |
           apt-get update -q -y
           apt-get install -q -y gcc make
         run: |
-            echo "::endgroup::" && echo "::endgroup::" # missing in 'run-on-arch-action'
+            echo "::endgroup::" # flatten 'run container'
             ./configure && make && make test -k
 
   test-riscv64-linux:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 6
     steps:
     - uses: actions/checkout@v4
-    - uses: uraimo/run-on-arch-action@v2
+    - uses: uraimo/run-on-arch-action@v3
       name: make & test tcc (riscv64-linux)
       with:
         arch: riscv64
-        distro: ubuntu20.04
+        distro: ubuntu22.04
         githubToken: ${{ github.token }}
         install: |
           apt-get update -q -y
           apt-get install -q -y gcc make
         run: |
-            echo "::endgroup::" && echo "::endgroup::" # missing in 'run-on-arch-action'
+            echo "::endgroup::" # flatten 'run container'
             ./configure && make && make test -k
