Add bound check support for alloca on all targets
stddef.h, tccdefs.h, tccgen.c, tests/boundtest.c, tests/tcctest.c:
- remove ifdef arround alloca

lib/Makefile:
- move alloca-bt.o to COMMON_O

lib/alloca-bt.S:
- add alloca bound check code for arm, arm64, riscv64

lib/alloca.S:
- check for leading underscore

tcc.h, libtcc.c:
- include arm64-asm.c instead of arm-asm.c for arm64

tcctok.h, tccasm.c:
- add simple reloc support (only for R_AARCH64_CALL26)

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -35,12 +35,12 @@ endif
 
 XFLAGS += -I$(TOP)
 
-I386_O = libtcc1.o alloca-bt.o $(COMMON_O)
-X86_64_O = libtcc1.o alloca-bt.o $(COMMON_O)
+I386_O = libtcc1.o $(COMMON_O)
+X86_64_O = libtcc1.o $(COMMON_O)
 ARM_O = libtcc1.o armeabi.o armflush.o $(COMMON_O)
 ARM64_O = lib-arm64.o $(COMMON_O)
 RISCV64_O = lib-arm64.o $(COMMON_O)
-COMMON_O = stdatomic.o atomic.o builtin.o alloca.o
+COMMON_O = stdatomic.o atomic.o builtin.o alloca.o alloca-bt.o
 WIN_O = crt1.o crt1w.o wincrt1.o wincrt1w.o dllcrt1.o dllmain.o
 LIN_O = dsohandle.o
 OSX_O =
