some reverts & fixes
workflow:
- revert 'pinact for security' for readability
  from 831c3fa184e3b4a93f09c7fd04170b022596aafd
tccpp.c:
- remove code that allows tcc to parse numbers incorrectly (*)
  from 829c84852012426230b0bec0efcfc1609bf4665b
tccgen.c:
- Revert "Relaxed the 'incompatible pointer type' warning a bit" (*)
  from d9ec17d33427fce6f73c5b5bb9646d3b077bb4e4.
tccrun.c:
- remove support for -nostdlib -run
  for simplicity, we require "main" with tcc -run always
tccpp.c:
- Revert "Free all preprocessor memmory in case of error."
  from c96f0cad61dbaa16c826879f65d5614e86eda8f2
  Remove TinyAlloc->limit instead.  Thus it can do also bigger
  allocs.  Big TokenStrings (like 200kb+ when compiling tcc)
  may come from inline functions or from large initializers.
Makefile/configure:
- use --config-pie for configuring tcc output only
- use -fPIC with clang-x86_64 to avoid 32-bit relocs
libtcc.c:
- fix "tcc file.c -run" i.e. -run as last argument
i386-gen.c:
- PIC refactor

(*) sorry, but code in tcc should have a minimum of generic relevance

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -35,7 +35,7 @@ endif
 
 XFLAGS += -I$(TOP)
 
-I386_O = libtcc1.o get_pc_thunk.o $(COMMON_O)
+I386_O = libtcc1.o $(COMMON_O)
 X86_64_O = libtcc1.o $(COMMON_O)
 ARM_O = libtcc1.o armeabi.o armflush.o $(COMMON_O)
 ARM64_O = lib-arm64.o $(COMMON_O)
@@ -50,15 +50,15 @@ Nat = $(if $X,no,)
 Cbt = $(Nat)$(subst yes,,$(CONFIG_backtrace))
 Cbc = $(Cbt)$(subst yes,,$(CONFIG_bcheck))
 
-$(Nat)COMMON_O += runmain.o run_nostdlib.o tcov.o
+$(Nat)COMMON_O += runmain.o tcov.o
 $(Cbt)COMMON_O += bt-exe.o bt-log.o
 $(Cbt)WIN_O += bt-dll.o
 $(Cbc)COMMON_O += bcheck.o
 
 # not in libtcc1.a
-EXTRA_O = runmain.o run_nostdlib.o bt-exe.o bt-dll.o bt-log.o bcheck.o get_pc_thunk.o
+EXTRA_O = runmain.o bt-exe.o bt-dll.o bt-log.o bcheck.o
 
-OBJ-i386 = $(I386_O) $(LIN_O)
+OBJ-i386 = $(I386_O) pic86.o $(LIN_O)
 OBJ-x86_64 = $(X86_64_O) $(LIN_O)
 OBJ-x86_64-osx = $(X86_64_O) $(OSX_O)
 OBJ-i386-win32 = $(I386_O) chkstk.o $(WIN_O)
@@ -88,9 +88,6 @@ $(X)%.o : %.c $(TCC)
 	$S$(XCC) -c $< -o $@ $(XFLAGS)
 
 $(X)%.o : %.S $(TCC)
-	$S$(XCC) -c $< -o $@ $(XFLAGS)
-
-$(TOP)/%.o : %.S $(TCC)
 	$S$(XCC) -c $< -o $@ $(XFLAGS)
 
 $(TOP)/%.o : %.c $(TCC)
