Add pic/pie support to i386
Some targets (netbsd) require that code is
compiled with -fPIE.

i386-gen.c:
Lot of changes to load/store code

i386-link.c:
Set PCRELATIVE_DLLPLT depending on configuration

tccelf.c:
Change some relocations and add get_pc_thunk.o

Makefile lib/Makefile lib/get_pc_thunk.S:
Add new file get_pc_thunk.o

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -35,7 +35,7 @@ endif
 
 XFLAGS += -I$(TOP)
 
-I386_O = libtcc1.o $(COMMON_O)
+I386_O = libtcc1.o get_pc_thunk.o $(COMMON_O)
 X86_64_O = libtcc1.o $(COMMON_O)
 ARM_O = libtcc1.o armeabi.o armflush.o $(COMMON_O)
 ARM64_O = lib-arm64.o $(COMMON_O)
@@ -56,7 +56,7 @@ $(Cbt)WIN_O += bt-dll.o
 $(Cbc)COMMON_O += bcheck.o
 
 # not in libtcc1.a
-EXTRA_O = runmain.o run_nostdlib.o bt-exe.o bt-dll.o bt-log.o bcheck.o
+EXTRA_O = runmain.o run_nostdlib.o bt-exe.o bt-dll.o bt-log.o bcheck.o get_pc_thunk.o
 
 OBJ-i386 = $(I386_O) $(LIN_O)
 OBJ-x86_64 = $(X86_64_O) $(LIN_O)
@@ -88,6 +88,9 @@ $(X)%.o : %.c $(TCC)
 	$S$(XCC) -c $< -o $@ $(XFLAGS)
 
 $(X)%.o : %.S $(TCC)
+	$S$(XCC) -c $< -o $@ $(XFLAGS)
+
+$(TOP)/%.o : %.S $(TCC)
 	$S$(XCC) -c $< -o $@ $(XFLAGS)
 
 $(TOP)/%.o : %.c $(TCC)
